# Simple_Algorithms

perfect_sets_counter/: CMakeLists.txt  binary_conv.cpp  binary_conv.h  common_libs.h  count_sets.cpp  count_sets.h  main.cpp
